2010-01-15  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        REGRESISON: Google maps buttons not working properly
        https://bugs.webkit.org/show_bug.cgi?id=31871

        REGRESSION(r52948): JavaScript exceptions thrown on Google Maps when
        getting directions for a second time
        https://bugs.webkit.org/show_bug.cgi?id=33446
        
        Added a test for these bugs.

        * fast/js/pic/undictionary-expected.txt: Added.
        * fast/js/pic/undictionary.html: Added.

2010-01-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        svg/custom/marker-changes.svg is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33728

        removing gratuitous setTimeout.

        * svg/custom/marker-changes.svg:

2010-01-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        transitions/shorthand-border-transitions.html is still flaky on slower bots
        https://bugs.webkit.org/show_bug.cgi?id=33721

        Increase the tolerance. The test still tests what it was meant to.

        * transitions/shorthand-border-transitions.html:

2010-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        animations/combo-transform-translate+scale.html failed on Snow Leopard Debug Bot
        https://bugs.webkit.org/show_bug.cgi?id=33461

        Make test half as long. Remove a setTimeout and tweak tolerances to
        reduce flakiness.

        * animations/combo-transform-translate+scale.html:

2010-01-14  Darin Fisher  <darin@chromium.org>

        Reviewed by Brady Eidson.

        history.pushState should clear the entire forward history
        https://bugs.webkit.org/show_bug.cgi?id=33160

        * fast/loader/stateobjects/pushstate-clears-forward-history-expected.txt: Added.
        * fast/loader/stateobjects/pushstate-clears-forward-history.html: Added.

2010-01-14  Csaba Osztrogonác  <ossy@webkit.org>
