@@ -1,0 +1,36 @@
+<script>
+onload = function() {
+  if (location.search.substring(1).length == 0) {
+    sessionStorage.testStage = 0;
+    if (window.layoutTestController) {
+      layoutTestController.dumpAsText();
+      layoutTestController.waitUntilDone();
+    }
+  }
+  // This test advances history by 2 pages, then navigates back one, and
+  // records history.length.  We expect history.length to indicate the total
+  // length of session history.  At the end of the test, it should be 2 greater
+  // than it was at the start of the test.
+  switch (sessionStorage.testStage++) {
+  case 0:
+    sessionStorage.initialLength = history.length;
+    location = "?a";
+    break;
+  case 1:
+    location = "?b";
+    break;
+  case 2:
+    history.back();
+    break;
+  case 3:
+    if (history.length == (sessionStorage.initialLength - 0) + 2)
+      document.body.innerHTML = "PASS";
+    else
+      document.body.innerHTML = "FAIL";
+    if (window.layoutTestController)
+      layoutTestController.notifyDone();
+    break;
+  }
+}
+</script>
+<body></body>
