@@ -4,10 +4,10 @@ ALERT: State popped - FirstEntry (type string)
 ALERT: State popped - SecondEntry (type string)
 ALERT: Navigating back...
 main frame - has 1 onunload handler(s)
-ALERT: History length is 2
+ALERT: History length is 3
 ALERT: Last path component of location is document-destroyed-navigate-back.html?SecondEntryShouldNeverBeReactivated
 main frame - has 1 onunload handler(s)
-ALERT: History length is 1
+ALERT: History length is 3
 ALERT: Last path component of location is document-destroyed-navigate-back.html?FirstEntryShouldNeverBeReactivated
 ALERT: Test completed
 This test:
@@ -16,7 +16,7 @@ This test:
 -Navigates away to a new document, with the old document being destroyed.
 -Navigates back to the state object entries and verifies the popstate event is not fired.
 
-History length is 1
+History length is 3
 Last path component of location is document-destroyed-navigate-back.html?FirstEntryShouldNeverBeReactivated
 Test completed
 
