@@ -6,7 +6,7 @@ ALERT: State popped - SecondEntry (type string)
 ALERT: hashChanged - Last path component of location is document-destroyed-navigate-back-with-fragment-scroll.html#SecondEntry
 ALERT: Navigating back...
 main frame - has 1 onunload handler(s)
-ALERT: History length is 2
+ALERT: History length is 3
 ALERT: Last path component of location is document-destroyed-navigate-back-with-fragment-scroll.html#SecondEntryShouldNeverBeReactivated
 ALERT: hashChanged - Last path component of location is document-destroyed-navigate-back-with-fragment-scroll.html#FirstEntryShouldNeverBeReactivated
 ALERT: Test completed
@@ -16,7 +16,7 @@ This test:
 -Navigates away to a new document, with the old document being destroyed.
 -Navigates back to the state object entries and verifies the popstate event is not fired.
 
-History length is 2
+History length is 3
 Last path component of location is document-destroyed-navigate-back-with-fragment-scroll.html#SecondEntryShouldNeverBeReactivated
 hashChanged - Last path component of location is document-destroyed-navigate-back-with-fragment-scroll.html#FirstEntryShouldNeverBeReactivated
 Test completed
