@@ -1,3 +1,15 @@
+2010-01-15  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by Brady Eidson.
+
+        history.length does not return number of elements in history list
+        https://bugs.webkit.org/show_bug.cgi?id=24472
+
+        Test: fast/history/history-length.html
+
+        * page/Page.cpp:
+        (WebCore::Page::getHistoryLength):
+
 2010-01-15  Dmitry Titov  <dimich@chromium.org>
 
         Reviewed by Darin Adler.
