@@ -1,3 +1,15 @@
+2010-01-15  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by Brady Eidson.
+
+        history.length does not return number of elements in history list
+        https://bugs.webkit.org/show_bug.cgi?id=24472
+
+        * fast/history/history-length-expected.txt: Added.
+        * fast/history/history-length.html: Added.
+        * fast/loader/stateobjects/document-destroyed-navigate-back-expected.txt: fix up test expectations
+        * fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll-expected.txt: fix up test expectations
+
 2010-01-15  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
